2006-01-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/matfunc.cpp, itpp/base/matfunc.h,
	tests/matfunc_test.cpp, tests/matfunc_test.ref: Added sqrtm()
	function that calculates the matrix square root for real and
	complex matrices. Based on Octave implementation.

	* itpp/base/stat.cpp, itpp/base/stat.h: Added frob_norm()
	functions that calculate Frobenius norm of matrices

	* itpp/base/machdep.h: Reverted back recent changes due to
	compilation problems under MSVC++ .NET (merged from itpp-3-9-branch)

2006-01-10  Thomas Eriksson  <thomases2@users.sourceforge.net>

	* itpp/base/machdep.h: Was changed in an undocumented way. I had
	to change back one line ("#elif defined(__i386__) .....") to make
	it compile in MSVC++.

2006-01-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/matfunc.cpp, itpp/base/matfunc.h: Cosmetic changes -
	removed unnecessary definition and updated author's list (merged
	from itpp-3-9-branch)

2006-01-09  Adam Piatyszek  <ediap@users.sourceforge.net>

	* INSTALL: Updated fragment with GCC version recommendations
	(merged from itpp-3-9-branch)

	* configure.ac, doc/local/index.doc.in: Updated for the next minor
	release (3.10.0)

	* NEWS: Merged changes from itpp-3-9-branch into the trunk

2006-01-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/images/favicon.ico, doc/images/itpp_logga.jpg,
	doc/images/itpp_logga.xcf: Changed keyword expansion mode for
	binary files

	* doc/local/installation.doc: Updated fragment with GCC version
	recommendations

	* tests/Makefile.am, tests/rec_syst_conv_code_test.cpp,
	tests/rec_syst_conv_code_test.ref: Minor cosmetic changes (renamed
	some test files)

	* itpp/base/fastica.cpp, itpp/base/gf2mat.cpp, itpp/base/gf2mat.h,
	itpp/base/machdep.h, itpp/base/scalfunc.h, itpp/comm/interleave.h, 
	itpp/protocol/packet_generator.cpp, tests/gf2mat_test.cpp: Minor
	cosmetic changes, e.g. removing inappropriate semicolons (detected